@@ -67,7 +67,7 @@ public:
     bool isNull() const;
 
     QPoint pos() const;
-    QRect boundingBox() const;
+    QRect boundingRect() const;
     QString title() const;
 
     QString linkText() const;
